# Code

./: README.md
MysqlRedis/: hiredis.lib  mysql.cpp  mysql.h  redis.h
MysqlRedis/mysql/: my_config.h  mysql_version.h  mysqld_ername.h  mysqld_error.h
TestOpencv/: CMakeLists.txt  Opencv.cpp
TestOpencv/include/opencv2/: cvconfig.h
TestOpencv/lib/: libopencv_flann.so.3.1.0  libopencv_highgui.so.3.1  libopencv_imgcodecs.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_photo.so.3.1  libopencv_stitching.so.3.1  libopencv_superres.so.3.1.0  libopencv_videoio.so.3.1.0  libopencv_videostab.so.3.1
gtest/: CMakeLists.txt  gtest_request_manager.cpp  main.cpp
gtest/include/: request_manager.h
project/: CMakeLists.txt  front_engine.proto  main.cpp
project/common/: CMakeLists.txt  Config.cpp  Config.h  common.cpp  common.h  config.conf
project/communication/: CMakeLists.txt  callback_manager.cpp  callback_manager.h  front_engine.pb.cc  front_engine.pb.h  md5.cpp  request_manager.cpp  request_manager.h
project/gtest/: CMakeLists.txt  gtest_callback_manager.cpp  gtest_data_manager.cpp  gtest_key_center.cpp  gtest_sql.cpp  gtest_wallet_front_socket.cpp  main.cpp
project/include/: wallet_front_base.h
project/key_center/: CMakeLists.txt  key_center.cpp  key_center.h  sql.cpp  sql.h
project/log/: CMakeLists.txt  log.cpp  log.h  log.properties
project/socket/: CMakeLists.txt  data_manager.cpp  data_manager.h  wallet_front_socket.cpp  wallet_front_socket.h
tests/: CMakeLists.txt  main.cpp
tests/include/zmq/: zmq.hpp
tests/socket/: CMakeLists.txt  callback_manager.cpp  callback_manager.h  data_manager.cpp  data_manager.h  front_engine.pb.cc  front_engine.pb.h  send_manager.cpp  send_manager.h  wallet_front_socket.cpp  wallet_front_socket.h
